# ROS-package-for-Semantic-Segmentation

./: .gitignore  CMakeLists.txt  README.md  contributors.txt  package.xml  setup.py
notebooks/: experiment.ipynb  pseudofcn_MSRC.ipynb  pseudofcn_NYU.ipynb  semantic_NYUv2D.ipynb
python/aman_sandbox/: __init__.py  pseudofcn_rgbd.py
python/aman_sandbox/layers/: __init__.py  deconv_layer.py
scratch/: LogReg.py
scripts/: caffe_theano.py  cal_mean_hha_bgr.py  draw_net.py  plot_traindata_epoch.py  run_test.sh  run_train.sh  test_NYUD.py  train_NYUD.py
scripts/Results/result_VGGM/: plot_train.py  test-stats-VGGM.txt  test_metrics.shelf  test_util.py  train_metrics_epoch.shelf
scripts/Results/results_VGG/: plot_train.py  test-stats-VGG.txt  test_metrics.shelf  test_util.py  train_metrics_epoch108.shelf  train_metrics_epoch_after_108.shelf
